Insert custom erros and custom responses
