# backend/docs/swagger.json
@@ -49,7 +49,7 @@
                 "tags": [
                     "Login Handler"
                 ],
-                "summary": "Get access token teste",
+                "summary": "Get access token",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -77,7 +77,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.CreatePatientRequest"
                         }
                     }
                 }
@@ -93,6 +93,20 @@
                 }
             }
         },
+        "models.CreatePatientRequest": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
         "models.HealthyResponse": {
             "type": "object",
             "properties": {
@@ -104,7 +118,7 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "Email": {
+                "email": {
                     "type": "string"
                 },
                 "id": {
